// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches danger 1`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #fff;
  background-color: #dc3545;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #dc3545;
}

<span
  className="c0"
/>
`;

exports[`Styles matches danger action 1`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #fff;
  background-color: #dc3545;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #dc3545;
}

.c0 > a:hover,
.c0 > a:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #c82333;
}

.c0:hover,
.c0:focus {
  cursor: pointer;
  background-color: #c82333;
}

.c0:hover > a,
.c0:focus > a {
  background-color: #c82333;
}

<span
  action={true}
  className="c0"
/>
`;
